# raksha-core

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  cost-alert-monitor.yml  cost-start-services.yml  cost-stop-services.yml  deploy-stage-prod.yml  deploy-test.yml  destroy-environment.yml  images.yml  infra-plan.yml  reusable-ecs-rollout.yml  reusable-image-build.yml  reusable-terraform-apply.yml  reusable-terraform-plan.yml
apps/alert-orchestrator/: Cargo.toml
apps/alert-orchestrator/src/: main.rs
apps/detector/: Cargo.toml
apps/detector-worker/: Cargo.toml
apps/detector-worker/src/: main.rs
apps/detector/src/: main.rs
apps/detector/src/patterns/: dpeg.rs  flash_loan.rs  generic_rule.rs  mod.rs  tvl_drop.rs
apps/finality/: Cargo.toml
apps/finality-worker/: Cargo.toml
apps/finality-worker/src/: main.rs
apps/finality/src/: main.rs
apps/history-worker/: Cargo.toml  README.md
apps/history-worker/src/: main.rs
apps/indexer/: Cargo.toml
apps/indexer-worker/: Cargo.toml
apps/indexer-worker/src/: main.rs
apps/indexer/src/: main.rs  stream_supervisor.rs  stream_worker.rs
apps/indexer/src/stream_connector/: http_poll.rs  mod.rs  rpc_logs.rs  rpc_state.rs  websocket.rs
apps/indexer/src/stream_parser/: aerodrome_swap_price.rs  binance_miniticker.rs  bybit_tickers_v5.rs  chainlink_answer_updated.rs  coinbase_ticker.rs  evm_log.rs  gate_ticker_v4.rs  gemini_marketdata_v1.rs  kraken_ticker_v2.rs  mod.rs  okx_tickers_v5.rs  protocol_pause.rs  protocol_tvl.rs  pyth_hermes_v2.rs  uniswap_v2_swap.rs  uniswap_v2_swap_price.rs  uniswap_v3_swap_price.rs
apps/market-detector/: Cargo.toml
apps/market-detector/src/: main.rs
apps/market-indexer/: Cargo.toml
apps/market-indexer/src/: main.rs
apps/orchestrator/: Cargo.toml
apps/orchestrator/src/: main.rs
apps/replay-cli/: Cargo.toml
apps/replay-cli/src/: main.rs
apps/scorer/: Cargo.toml
apps/scorer/src/: main.rs
crates/alert-client/: Cargo.toml
crates/alert-client/src/: lib.rs
crates/chain-adapter-evm/: Cargo.toml
crates/chain-adapter-evm/src/: adapter.rs  config.rs  decode_chainlink.rs  mock.rs  normalize.rs  protocol_map.rs
crates/common/: Cargo.toml
crates/common-types/: Cargo.toml
crates/common/src/: circuit_breaker.rs  config.rs  data_source.rs  health_check.rs  lib.rs  postgres.rs  shutdown.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core-interfaces/: Cargo.toml
crates/core-interfaces/src/: lib.rs
crates/correlation-engine/: Cargo.toml
crates/correlation-engine/src/: lib.rs
crates/detection-engine/: Cargo.toml
crates/detection-engine/src/: lib.rs  main.rs
crates/dpeg-engine/: Cargo.toml
crates/dpeg-engine/src/: lib.rs
crates/event-schema/: Cargo.toml
crates/event-schema/src/: lib.rs
crates/event-stream/: Cargo.toml
crates/event-stream/src/: lib.rs
crates/feature-builder/: Cargo.toml
crates/feature-builder/src/: lib.rs  main.rs  reference_price.rs
crates/finality-engine/: Cargo.toml
crates/finality-engine/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: adapter.rs  config.rs  connector.rs  decode_flashloan.rs  lib.rs  mock.rs  normalize.rs  protocol_map.rs
crates/market-connectors/: Cargo.toml
crates/market-connectors/src/: lib.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/reference-price/: Cargo.toml
crates/reference-price/src/: lib.rs
crates/replay-backtest/: Cargo.toml
crates/replay-backtest/src/: lib.rs
crates/risk-scorer/: Cargo.toml
crates/risk-scorer/src/: lib.rs
crates/rule-engine/: Cargo.toml
crates/rule-engine/src/: lib.rs
crates/state-manager/: Cargo.toml
crates/state-manager/src/: correlation.rs  dead_letter_queue.rs  finality.rs  lib.rs  persistence.rs  raw_repository.rs
crates/trace-enricher/: Cargo.toml
crates/trace-enricher/src/: lib.rs
docs/: ARCHITECTURE.md  AWS_ARCHITECTURE.md  LOCAL_TESTING.md  MANUAL_DESTROY_SEQUENCE.md  README.md  SCENARIO_DOLLAR_DEPEG_ALERT.md  SCENARIO_FLASH_LOAN_ATTACK.md
docs/diagrams/: raksha_core_aws_architecture.py
infra/: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  service-catalog.yaml
infra/local/: docker-compose.yml
infra/sql/: 001_init.sql  002_lifecycle_tenant.sql  003_market_dpeg.sql  README.md  schema.sql  seed_data.sql  upgrade_generic_incidents.sql  upgrade_history_intelligence.sql  upgrade_poll_interval_ms.sql
infra/sql/bootstrap/: core_schema.sql  history_schema.sql  raw_schema.sql  seed_history_replay.sql  seed_patterns.sql  seed_sources.sql
infra/terraform/: README.md  alb.tf  elasticache.tf  iam-ecr.tf  main.tf  outputs.tf  rds.tf  security-groups.tf  variables.tf  vpc.tf
infra/terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/environments/stage/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/environments/test/: imports.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/cicd-iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/compute-ecs/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cost-controls/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/data-prod/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/data-test/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/network/: main.tf  outputs.tf  variables.tf
scenarios/historical/: README.md  bzx_2020_flash_loan.yaml  cream_2021_flash_loan.yaml  euler_2023_flash_loan.yaml
schemas/: detection_result.schema.json  init.sql  normalized_event.schema.json
scripts/: codespace-bootstrap.sh  codespace-down.sh  codespace-env.sh  codespace-up.sh  local-terraform-check.sh
scripts/ci/: build_push_images.sh  common.sh  deploy_ecs_services.sh  terraform_apply.sh  terraform_destroy.sh  terraform_init.sh  terraform_plan.sh
(+6 files in other folders)
