[workspace]
resolver = "2"
members = [
  # Library crates
  "crates/event-schema",
  "crates/common",
  "crates/ingestion",
  "crates/feature-builder",
  "crates/detection-engine",
  "crates/risk-scorer",
  "crates/state-manager",
  "crates/notifier",
  # Binary applications
  "apps/indexer",
  "apps/detector",
  "apps/scorer",
  "apps/orchestrator",
  "apps/finality",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
ethers = { version = "2.0", features = ["ws", "rustls"] }
futures-util = "0.3"
hex = "0.4"
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
