[package]
name = "detector-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenv.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

alert-client = { path = "../../crates/alert-client" }
chain-adapter-evm = { path = "../../crates/chain-adapter-evm" }
common-types = { path = "../../crates/common-types" }
core-interfaces = { path = "../../crates/core-interfaces" }
event-stream = { path = "../../crates/event-stream" }
persistence = { path = "../../crates/persistence" }
reference-price = { path = "../../crates/reference-price" }
risk-scorer = { path = "../../crates/risk-scorer" }
rule-engine = { path = "../../crates/rule-engine" }
trace-enricher = { path = "../../crates/trace-enricher" }
