[package]
name = "detector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "detector"
path = "src/main.rs"

[dependencies]
# Local crates
detection-engine = { path = "../../crates/detection-engine" }
ingestion = { path = "../../crates/ingestion" }
feature-builder = { path = "../../crates/feature-builder" }
risk-scorer = { path = "../../crates/risk-scorer" }
notifier = { path = "../../crates/notifier" }
event-schema = { path = "../../crates/event-schema" }
common = { path = "../../crates/common" }
state-manager = { path = "../../crates/state-manager" }

# External dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
