[package]
name = "detector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "detector"
path = "src/main.rs"

[dependencies]
# Local crates
event-schema = { path = "../../crates/event-schema" }
state-manager = { path = "../../crates/state-manager" }

# External dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
