[package]
name = "finality-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
common-types = { path = "../../crates/common-types" }
core-interfaces = { path = "../../crates/core-interfaces" }
event-stream = { path = "../../crates/event-stream" }
finality-engine = { path = "../../crates/finality-engine" }
