[package]
name = "finality"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "finality"
path = "src/main.rs"

[dependencies]
# Local crates
state-manager = { path = "../../crates/state-manager" }
event-schema = { path = "../../crates/event-schema" }
common = { path = "../../crates/common" }

# External dependencies
anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
