[package]
name = "history-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "history-worker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
common = { path = "../../crates/common" }
dotenvy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
