[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
# Local crates
common = { path = "../../crates/common" }
event-schema = { path = "../../crates/event-schema" }
ingestion = { path = "../../crates/ingestion" }
state-manager = { path = "../../crates/state-manager" }

# External dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
ethers = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
