[package]
name = "market-detector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "market-detector"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }
dpeg-engine = { path = "../../crates/dpeg-engine" }
event-schema = { path = "../../crates/event-schema" }
state-manager = { path = "../../crates/state-manager" }

anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
