[package]
name = "market-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "market-indexer"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }
event-schema = { path = "../../crates/event-schema" }
market-connectors = { path = "../../crates/market-connectors" }
state-manager = { path = "../../crates/state-manager" }

anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
