[package]
name = "scorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scorer"
path = "src/main.rs"

[dependencies]
# Local crates
risk-scorer = { path = "../../crates/risk-scorer" }
event-schema = { path = "../../crates/event-schema" }
common = { path = "../../crates/common" }
state-manager = { path = "../../crates/state-manager" }

# External dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
