[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
event-schema = { path = "../event-schema" }
dotenv.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
