[package]
name = "detection-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
ethers.workspace = true
event-schema = { path = "../event-schema" }
common = { path = "../common" }
feature-builder = { path = "../feature-builder" }
ingestion = { path = "../ingestion" }
notifier = { path = "../notifier" }
risk-scorer = { path = "../risk-scorer" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
state-manager = { path = "../state-manager" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
