[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
event-schema = { path = "../event-schema" }
common = { path = "../common" }
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
state-manager = { path = "../state-manager" }
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
