[package]
name = "state-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
event-schema = { path = "../event-schema" }
common = { path = "../common" }
notifier = { path = "../notifier" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
